<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_grammar_dictionary"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_grammar_dictionary"/>
<!--
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Gallery"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Slideshow"/>
        <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="Tools"/>
-->
    </group>

    <item android:title="N2">
        <menu>
            <item
                    android:id="@+id/nav_vocabulary_n2"
                    android:title="@string/menu_vocabulary_n2"/>
            <item
                    android:id="@+id/nav_kanji_n2"
                    android:title="@string/menu_kanji_n2"/>
            <item
                    android:id="@+id/nav_grammar_n2"
                    android:title="@string/menu_grammar_n2"/>
        </menu>
    </item>

</menu>
