<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="8dp">
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            card_view:cardUseCompatPadding="true">
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:background="@color/itemBackground">
            <TextView
                    android:id="@+id/question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimarySecondaryText"
                    android:text="@string/label_do_you_know_word"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp">
                <TextView
                        android:id="@+id/japanese"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="18sp"
                        android:textColor="@color/primaryText"
                        tools:text="SOME WORD"/>
                <TextView
                        android:id="@+id/reading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/secondaryText"
                        tools:text="Reading"/>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/buttonBackground"/>
                <TextView
                        android:id="@+id/translation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="18sp"
                        android:textColor="@color/primaryText"
                        android:gravity="center_horizontal"
                        tools:text="Translation"/>
            </LinearLayout>
        </FrameLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/noButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/button_no"/>
        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <Button
                android:id="@+id/yeButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/button_yes"/>
    </LinearLayout>
</LinearLayout>