<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:gravity="center_vertical">
                <com.gogaworm.easyjlpt.ui.widgets.ArcProgress
                        android:id="@+id/progress"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        app:arc_text_size="10sp"
                        app:arc_suffix_text_size="8sp"
                        app:arc_suffix_text_padding="2dp"
                        android:layout_marginRight="8dp"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <com.gogaworm.easyjlpt.ui.widgets.KanjiKanaView
                            android:id="@+id/kanjiView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/primaryText"
                            android:background="@color/divider"
                            tools:text="Japanese"/>
                    <TextView
                            android:id="@+id/translation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/secondaryText"
                            tools:text="Translation"/>
                </LinearLayout>
            </LinearLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/divider"/>
            <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:id="@+id/flashCardButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_flash_card"/>
                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:id="@+id/learnButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_learn"/>
                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:id="@+id/examButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_exam"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>