<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="8dp">
    <androidx.cardview.widget.CardView
            xmlns:tools="http://schemas.android.com/tools"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="24dp">
            <TextView
                    android:id="@+id/question"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/label_do_you_know_word"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:id="@+id/japanese"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    tools:text="SOME WORD"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/question"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:id="@+id/reading"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    tools:text="Reading"
                    app:layout_constraintTop_toBottomOf="@+id/japanese"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/reading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:id="@+id/translation"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    tools:text="Translation"
                    app:layout_constraintTop_toBottomOf="@+id/divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/translation"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_gravity="end"
            android:text="@string/button_submit"/>
    <LinearLayout
            android:id="@+id/resultButtonsPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
        <Button
                android:id="@+id/noButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/button_no"/>
        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <Button
                android:id="@+id/yesButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/button_yes"/>
    </LinearLayout>
</LinearLayout>
