<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="4dp">
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardUseCompatPadding="true">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
            <TextView
                    android:id="@+id/statusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:text="@string/label_learn_status_excellent"/>
            <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                <com.gogaworm.easyjlpt.ui.widgets.ArcProgress
                        android:id="@+id/progress"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_gravity="center"
                        app:arc_text_size="24sp"
                        app:arc_suffix_text_size="16sp"
                        app:arc_suffix_text_padding="2dp"
                        android:layout_margin="24dp"/>
            </FrameLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="24dp"
                          android:layout_marginBottom="48dp"
                          android:baselineAligned="false">
                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_weight="0.5"
                              android:gravity="right"
                              android:orientation="vertical">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/label_study_word_count"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:textSize="18sp"
                            android:text="@string/label_study_time"/>

                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:gravity="left"
                              android:layout_weight="0.5"
                              android:orientation="vertical"
                              android:layout_marginLeft="8dp">
                    <TextView
                            android:id="@+id/studyWordCountView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:textSize="18sp"
                            android:text="24"/>
                    <TextView
                            android:id="@+id/studyTimeView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:textColor="@color/primaryText"
                            android:textSize="18sp"
                            android:text="5 min"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>